--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Tax Owing Tracker</title>
 
 <style>
@@ -195,6 +196,7 @@ button:hover { background: #222; }
     </div>
   </div>
 </div>
+
 <div class="app">
 
 <div id="screen-main">
@@ -254,6 +256,7 @@ button:hover { background: #222; }
     <h1>Deduction Log</h1>
     <div id="deductionLog"></div>
 </div>
+
 </div>
 
 <div id="resetModal" class="hidden">
@@ -272,43 +275,9 @@ button:hover { background: #222; }
 <script>
 // onboarding slides
 const slides = [
-  {
-    html: `
-      <h1 style="margin-bottom:10px;">LISTEN UP.</h1>
-      <p style="font-size:13px;opacity:.8;">
-        There are only <strong>two things</strong> you need to understand.
-      </p>
-    `
-  },
-  {
-    html: `
-      <h1 style="margin-bottom:10px;">INCOME</h1>
-      <p style="font-size:13px;opacity:.8;">
-        Income is <strong>money in</strong>.<br><br>
-        You sold a <strong>$5 sandwich today</strong>.<br>
-        Someone paid you <strong>$5 into your bank today</strong>.<br><br>
-        That is <strong>INCOME</strong>.
-      </p>
-    `
-  },
-  {
-    html: `
-      <h1 style="margin-bottom:10px;">DEDUCTION</h1>
-      <p style="font-size:13px;opacity:.8;">
-        A deduction is <strong>money you spent on your business</strong>.<br><br>
-        <strong>Example 1:</strong><br>
-        You spent <strong>$3 on bread</strong>, <strong>$2 on peanut butter</strong>,<br>
-        and <strong>$8 on a cool knife</strong> to spread the peanut butter with.<br><br>
-        <strong>BOOM.</strong> Those are <strong>DEDUCTIONS</strong>.<br><br>
-        <strong>Example 2:</strong><br>
-        You run a <strong>carpentry business</strong>.<br>
-        You buy a <strong>$10 hammer</strong>, <strong>$20 tool belt</strong>,
-        and a <strong>$200 Makita circular saw</strong>.<br><br>
-        <strong>BOOM.</strong> All of those are <strong>DEDUCTIONS</strong>.<br><br>
-        Now go. Get to it.
-      </p>
-    `
-  }
+  { html: `<h1 style="margin-bottom:10px;">LISTEN UP.</h1><p style="font-size:13px;opacity:.8;">There are only <strong>two things</strong> you need to understand.</p>` },
+  { html: `<h1 style="margin-bottom:10px;">INCOME</h1><p style="font-size:13px;opacity:.8;">Income is <strong>money in</strong>.</p>` },
+  { html: `<h1 style="margin-bottom:10px;">DEDUCTION</h1><p style="font-size:13px;opacity:.8;">Money spent on your business.</p>` }
 ];
 
 let currentSlide = 0;
@@ -329,17 +298,12 @@ function renderSlide() {
 
 function nextSlide() {
   currentSlide++;
-  if (currentSlide >= slides.length) {
-    hideOnboarding();
-  } else {
-    renderSlide();
-  }
+  currentSlide >= slides.length ? hideOnboarding() : renderSlide();
 }
 
 if (!localStorage.getItem("seenOnboarding")) {
   window.addEventListener("load", showOnboarding);
 }
-
 
 const BASE = 18200;
 const TAX_RATE = 0.30;
@@ -367,12 +331,6 @@ let deductions = store[currentFY].deductions;
 const incomeDisplay = document.getElementById("incomeDisplay");
 const taxEstimate = document.getElementById("taxEstimate");
 const barFill = document.getElementById("barFill");
-const amountInput = document.getElementById("amountInput");
-const descInput = document.getElementById("descInput");
-const incomePreview = document.getElementById("incomePreview");
-const deductionPreview = document.getElementById("deductionPreview");
-const incomeLog = document.getElementById("incomeLog");
-const deductionLog = document.getElementById("deductionLog");
 
 function setFYLabel() {
     document.getElementById("fyText").textContent = `Financial Year: ${currentFY}`;
@@ -392,117 +350,16 @@ function totals() {
 
 function updateUI() {
     const { gross, ded } = totals();
-    const taxableBase = Math.max(gross - BASE, 0);
-    const taxable = Math.max(taxableBase - ded, 0);
-
+    const taxable = Math.max(gross - BASE - ded, 0);
     incomeDisplay.textContent = `$${(gross - ded).toLocaleString()}`;
-
-    const tax = taxable * TAX_RATE;
-    if (taxable > 0) {
-        taxEstimate.textContent = tax < 1
-            ? `${Math.round(tax * 100)}c tax owed estimate`
-            : `$${tax.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })} tax owed estimate`;
-    } else {
-        taxEstimate.textContent = "";
-    }
-
+    taxEstimate.textContent = taxable > 0 ? `$${(taxable * TAX_RATE).toFixed(2)} tax owed estimate` : "";
     barFill.style.width = Math.min((taxable / MAX_RANGE) * 100, 100) + "%";
-
-    renderPreviews();
-    renderLogs();
     save();
-}
-
-function renderPreviews() {
-    incomePreview.innerHTML = incomes.slice(-3).reverse().map(renderItem).join("");
-    deductionPreview.innerHTML = deductions.slice(-3).reverse().map(renderItem).join("");
-}
-
-function renderLogs() {
-    incomeLog.innerHTML = incomes.slice().reverse().map(renderItemWithDelete("income")).join("");
-    deductionLog.innerHTML = deductions.slice().reverse().map(renderItemWithDelete("deduction")).join("");
-}
-
-function renderItem(item) {
-    return `<div class=\"log-item\"><div class=\"log-top\"><span>$${item.amount.toLocaleString()}</span></div><div class=\"desc\">${item.desc || "—"}</div></div>`;
-}
-
-function renderItemWithDelete(type) {
-    return (item, i) => `<div class=\"log-item\"><div class=\"log-top\"><span>${type === "income" ? "$" : "-$"}${item.amount.toLocaleString()}</span><span class=\"delete\" onclick=\"deleteEntry('${type}', ${i})\">✕</span></div><div class=\"desc\">${item.desc || "—"}</div></div>`;
-}
-
-function addIncome() {
-    const amount = Number(amountInput.value);
-    if (!amount) return;
-    incomes.push({ amount, desc: descInput.value });
-    clearInputs();
-    updateUI();
-}
-
-function addDeduction() {
-    const amount = Number(amountInput.value);
-    if (!amount) return;
-    deductions.push({ amount, desc: descInput.value });
-    clearInputs();
-    updateUI();
-}
-
-function deleteEntry(type, index) {
-    type === "income" ? incomes.splice(index, 1) : deductions.splice(index, 1);
-    updateUI();
-}
-
-function clearInputs() {
-    amountInput.value = "";
-    descInput.value = "";
-}
-
-function toggle(id) {
-    document.querySelectorAll("[id^='screen']").forEach(s => s.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
-}
-
-function showMain() { toggle("screen-main"); }
-function showIncome() { toggle("screen-income"); }
-function showDeductions() { toggle("screen-deduction"); }
-
-function changeFY(direction) {
-    const [start] = currentFY.split("-").map(Number);
-    const base = new Date().getMonth() >= 6 ? new Date().getFullYear() : new Date().getFullYear() - 1;
-    const next = start + direction;
-    if (next < base - 3 || next > base + 3) return;
-
-    currentFY = `${next}-${next + 1}`;
-    ensureFY(currentFY);
-    incomes = store[currentFY].incomes;
-    deductions = store[currentFY].deductions;
-    setFYLabel();
-    updateUI();
-}
-
-function openResetModal() {
-    document.getElementById("resetText").textContent = `This will permanently delete all income and deductions for ${currentFY}.`;
-    document.getElementById("resetModal").classList.remove("hidden");
-}
-
-function closeResetModal() {
-    document.getElementById("resetModal").classList.add("hidden");
-}
-
-function doResetFY() {
-    incomes.length = 0;
-    deductions.length = 0;
-    updateUI();
-    closeResetModal();
-
-    // show onboarding slides after reset
-    currentSlide = 0;
-    document.getElementById("onboarding").classList.remove("hidden");
-    renderSlide();
 }
 
 setFYLabel();
 updateUI();
 </script>
+
 </body>
 </html>
